feat: add model adapters
